<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.ui.options.OptionsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/settings"
            style="@style/Widget.AppCompat.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/general"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <ImageButton
            android:id="@+id/optionsBtnBack"
            style="?attr/actionOverflowButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
            app:layout_constraintBottom_toBottomOf="@+id/topDivider"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/topDivider"
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings" />


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchNightMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp"
            android:paddingVertical="12dp"
            android:text="@string/use_dark_theme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topDivider"
            app:thumbTint="@color/custom_thumb_selector2"
            app:trackTint="@color/custom_thumb_selector" />


        <View
            android:id="@+id/firstDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchNightMode" />


        <LinearLayout
            android:id="@+id/layoutDateAndTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstDivider">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/date_and_time"
                android:textColor="?android:attr/textColorPrimary" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/image_description"
                android:src="@drawable/ic_baseline_navigate_next_24" />

        </LinearLayout>


        <View
            android:id="@+id/secondDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutDateAndTime" />


        <LinearLayout
            android:id="@+id/alarmSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/secondDivider">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center"
                android:text="@string/alarm_settings"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="20sp" />

        </LinearLayout>

        <View
            android:id="@+id/thirdDivider"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alarmSettings" />


        <LinearLayout
            android:id="@+id/llDefaultAlarmSound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thirdDivider">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/default_alarm_sound"
                android:textColor="?android:attr/textColorPrimary" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/image_description"
                android:src="@drawable/ic_baseline_navigate_next_24" />

        </LinearLayout>


        <View
            android:id="@+id/fourthDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llDefaultAlarmSound" />


        <LinearLayout
            android:id="@+id/llAlarmSnooze"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:descendantFocusability="blocksDescendants"
            android:focusable="true"
            android:orientation="horizontal"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fourthDivider">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/snooze_message"
                android:textColor="?android:attr/textColorPrimary" />

            <TextView
                android:id="@+id/txtPreferredSource"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textColor="?android:attr/textColorSecondary"
                tools:text="Every 15 minutes" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/image_description"
                android:src="@drawable/ic_baseline_navigate_next_24" />

        </LinearLayout>


        <View
            android:id="@+id/fifthDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llAlarmSnooze" />


        <LinearLayout
            android:id="@+id/timerSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fifthDivider">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center"
                android:text="@string/timer_settings"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="20sp" />

        </LinearLayout>

        <View
            android:id="@+id/sixDivider"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timerSettings" />


        <LinearLayout
            android:id="@+id/llDefaultRingtoneSound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sixDivider">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/default_ringtone_sound"
                android:textColor="?android:attr/textColorPrimary" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/image_description"
                android:src="@drawable/ic_baseline_navigate_next_24" />

        </LinearLayout>


        <View
            android:id="@+id/bottomDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llDefaultRingtoneSound" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>