<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <NumberPicker
            android:id="@+id/npHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp" />
        <NumberPicker
            android:id="@+id/npMinutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />
        <NumberPicker
            android:id="@+id/npSeconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/md_transparent"
            android:text="@string/cancel"
            android:layout_marginEnd="5dp"
            android:textColor="@color/black"
            android:textSize="13sp"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btnSetTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/md_transparent"
            android:text="@string/set_time"
            android:textColor="@color/black"
            android:textSize="13sp"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>