<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.timer.TimerFragment">

    <LinearLayout
        android:id="@+id/llTimer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.mikhaellopez.circularprogressbar.CircularProgressBar
                android:id="@+id/circularProgressBar"
                android:layout_width="250dp"
                android:layout_height="250dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/ibTimerStartPause"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:visibility="gone"
                android:background="@drawable/round_button"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/circularProgressBar"
                android:contentDescription="@string/image_description" />

            <ImageButton
                android:id="@+id/ibSetNewTime"
                android:contentDescription="@string/image_description"
                style="?android:attr/actionOverflowButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_baseline_timer_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ibTimerStartPause" />

            <TextView
                android:id="@+id/tvCountDown"
                style="?android:attr/actionOverflowButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:countDown="false"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/circularProgressBar"
                app:layout_constraintEnd_toEndOf="@+id/circularProgressBar"
                app:layout_constraintStart_toStartOf="@+id/circularProgressBar"
                app:layout_constraintTop_toTopOf="@+id/circularProgressBar"
                tools:text="00:00:00"
                />

            <ImageButton
                android:id="@+id/ibCancelAlarm"
                style="?android:attr/actionOverflowButtonStyle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/image_description"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_baseline_timer_off_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/circularProgressBar" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>